fix overflow chat name

--- a/src/components/panel_container/style.css
+++ b/src/components/panel_container/style.css
@@ -110,6 +110,7 @@
   --height: 20px;
   overflow: hidden;
   max-width: 100%;
+  min-width: 20px;
   height: var(--height);
   margin-top: 10px;
   line-height: var(--height);
